nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: cloudengineers
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: nginx
        image: hptestcontreg.azurecr.io/nginx:1.1.1
        imagePullPolicy: Always
        resources:
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mydockerimagepullsec
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cloudengineers
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
