ingressrules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingressctrl
  namespace: cloudengineers
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  rules:
  - host: www.8dd0d2447cab4610a1ed.centralus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
